--- a/css/theme/source/js.scss
+++ b/css/theme/source/js.scss
@@ -13,9 +13,34 @@ $headingColor: #000;
 $headingTextShadow: none;
 $headingTextTransform: none;
 $backgroundColor: #f7df1e;
-$linkColor: #00008B;
+$linkColor: #7b0046;
 $linkColorHover: lighten($linkColor, 20%);
 $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
+
+// Theme template ------------------------------
+@import "../template/theme";
+// ---------------------------------------------
+
+.reveal h1 {
+  color: white;
+  text-shadow: 0 0 10px black;
+}
+
+.reveal img.me {
+  height: 250px;
+  width: 250px;
+  box-shadow: 5px 5px 10px 1px rgba(0,0,0,.3);
+  float: left;
+  border-radius: 50%;
+  border: 5px solid #7b0046;
+  object-fit: cover;
+}
+
+.reveal .about {
+  text-align: left;
+  padding-left: 40px;
+  overflow: hidden;
+}
 
 ul.columns {
   columns: 2;
@@ -57,7 +82,3 @@ ul.columns {
     color: rgba(0, 0, 0, .3)
   }
 }
-
-// Theme template ------------------------------
-@import "../template/theme";
-// ---------------------------------------------
